--- a/colire/src/components/css/snackbar.css
+++ b/colire/src/components/css/snackbar.css
@@ -9,7 +9,7 @@
   border-radius: 4px;
   opacity: 0;
   transform: translateY(-3rem);
-  transition: opacity 0.5s ease, transform 0.5s ease;
+  transition: all 0.5s ease;
   background: var(--dark-m);
   z-index: 1;
 }
